--- a/index.html
+++ b/index.html
@@ -1,79 +1,79 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Whisp</title>
+<meta charset="UTF-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<title>Whisp 💬</title>
 <style>
-html, body {margin:0;padding:0;height:100%;background:#e8f0fe;font-family:"Segoe UI", Roboto, sans-serif;}
-main {height:100%;display:flex;flex-direction:column;}
+  html, body {margin:0;padding:0;height:100%;font-family:"Segoe UI", Roboto, sans-serif;background:#e8f0fe;}
+  main {height:100%;display:flex;flex-direction:column;max-width:600px;margin:auto;border-radius:10px;overflow:hidden;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
+  
+  .screen{display:none;flex-direction:column;height:100%;}
+  .screen.active{display:flex;}
 
-.screen{display:none;flex-direction:column;height:100%;}
-.screen.active{display:flex;}
+  /* Login */
+  #loginScreen{justify-content:center;align-items:center;text-align:center;padding:20px;background:#1a73e8;color:white;}
+  #loginScreen h2{font-size:2rem;margin-bottom:20px;}
+  #loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
+  #loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 
-/* Login */
-#loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;}
-#loginScreen h2{font-size:2rem;margin-bottom:20px;}
-#loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
-#loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
+  /* Chat List */
+  #chatListScreen{background:#fff;flex:1;position:relative;}
+  #chatListHeader{background:#1a73e8;color:white;padding:14px;font-weight:600;position:sticky;top:0;z-index:1;}
+  #chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
+  .chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
+  .chatItem:hover{background:#f1f5ff;}
 
-/* Chat List */
-#chatListScreen{background:#fff;flex:1;display:flex;flex-direction:column;}
-#chatListHeader{background:#1a73e8;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
-#chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
-.chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
-.chatItem:hover{background:#f1f5ff;}
+  /* Floating buttons */
+  .floatingBtn{position:fixed;bottom:20px;right:20px;background:#1a73e8;color:white;border:none;border-radius:50%;width:56px;height:56px;font-size:1.5rem;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);}
+  #newGroupBtn{right:90px;}
 
-/* Bottom Menu */
-#bottomMenu{display:flex;justify-content:space-around;align-items:center;position:fixed;bottom:0;left:0;width:100%;background:#1a73e8;padding:10px 0;}
-#bottomMenu button{background:#fff;border:none;color:#1a73e8;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
+  /* Chat */
+  #chatScreen{background:#e8f0fe;flex:1;display:flex;flex-direction:column;}
+  #chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;align-items:center;position:sticky;top:0;z-index:2;}
+  #chatHeader button{background:none;border:none;color:white;font-size:1.2rem;cursor:pointer;margin-right:10px;}
+  #chatName{flex:1;font-weight:600;text-align:center;}
+  #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
+  .msg{max-width:75%;margin-bottom:10px;padding:8px 12px;border-radius:12px;position:relative;word-wrap:break-word;animation:fadeIn 0.2s;}
+  .me{align-self:flex-end;background:#cfe2ff;}
+  .them{align-self:flex-start;background:#fff;}
+  .timestamp{font-size:0.75rem;color:#555;text-align:right;margin-top:2px;}
 
-/* Chat */
-#chatScreen{background:#e8f0fe;flex:1;display:flex;flex-direction:column;}
-#chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
-#chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
-#messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
-.msg{max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;position:relative;word-wrap:break-word;}
-.me{align-self:flex-end;background:#cfe2ff;}
-.them{align-self:flex-start;background:#fff;}
-.timestamp{font-size:0.75rem;color:#666;text-align:right;margin-top:2px;}
+  /* Reply bar */
+  #replyBar{display:none;background:#e3f2fd;padding:6px 10px;border-left:4px solid #1a73e8;font-size:0.9rem;align-items:center;display:flex;justify-content:space-between;}
+  #replyText{flex:1;}
+  #cancelReply{background:none;border:none;color:#1a73e8;font-weight:bold;cursor:pointer;margin-left:10px;}
 
-/* Reply Bar */
-#replyBar{display:none;background:#e3f2fd;padding:6px 10px;border-left:4px solid #1a73e8;font-size:0.9rem;align-items:center;justify-content:space-between;display:flex;}
-#replyText{flex:1;}
-#cancelReply{background:none;border:none;color:#1a73e8;font-weight:bold;cursor:pointer;margin-left:10px;}
+  /* Input bar */
+  #inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;position:sticky;bottom:0;}
+  #message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
+  #sendBtn{background:#1a73e8;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
 
-/* Input Bar */
-#inputBar{display:none;flex:1;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;}
-#message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
-#sendBtn{background:#1a73e8;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
-
-@media (min-width:700px){main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}#bottomMenu{position:static;border-top:1px solid #ccc;}}
+  @keyframes fadeIn{from{opacity:0}to{opacity:1}}
 </style>
 </head>
 <body>
 <main>
+  <!-- Login -->
   <section id="loginScreen" class="screen active">
     <div>
-      <h2>Welcome to Whisp 💬</h2>
+      <h2>Whisp 💬</h2>
       <input id="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
-      <input id="username" placeholder="Username (for signup)" />
+      <input id="username" placeholder="Username (signup)" />
       <button id="loginBtn">Login / Register</button>
     </div>
   </section>
 
+  <!-- Chat List -->
   <section id="chatListScreen" class="screen">
-    <div id="chatListHeader">Whisp Chats</div>
+    <div id="chatListHeader">Chats</div>
     <div id="chatList"></div>
-    <div id="bottomMenu">
-      <button id="dmBtn">DM</button>
-      <button id="groupBtn">Group</button>
-      <button id="helpBtn">Help</button>
-      <button id="logoutBtn">Logout</button>
-    </div>
+    <button id="dmBtn" class="floatingBtn">💬</button>
+    <button id="newGroupBtn" class="floatingBtn">👥</button>
   </section>
 
+  <!-- Chat Screen -->
   <section id="chatScreen" class="screen">
     <div id="chatHeader">
       <button id="backBtn">←</button>
@@ -117,14 +117,12 @@ const loginScreen=document.getElementById("loginScreen"),
       replyBar=document.getElementById("replyBar"),
       replyText=document.getElementById("replyText"),
       cancelReplyBtn=document.getElementById("cancelReply"),
-      messageInput=document.getElementById("message"),
-      inputBar=document.getElementById("inputBar");
+      messageInput=document.getElementById("message");
 
 let currentUser=null, currentChatId=null, replyTo=null, currentListenerRef=null;
 
 const show=(s)=>{[loginScreen,chatListScreen,chatScreen].forEach(e=>e.classList.remove("active"));s.classList.add("active");};
 
-// LOGIN / REGISTER
 document.getElementById("loginBtn").onclick=async()=>{
   const email=document.getElementById("email").value.trim();
   const password=document.getElementById("password").value.trim();
@@ -140,20 +138,17 @@ document.getElementById("loginBtn").onclick=async()=>{
   }
 };
 
-// AUTH STATE
 onAuthStateChanged(auth,async user=>{
-  if(user){currentUser=user; loadChats(); show(chatListScreen);}
-  else{show(loginScreen);}
+  if(user){currentUser=user;loadChats();show(chatListScreen);}else{show(loginScreen);}
 });
 
-// LOAD CHATS
 async function loadChats(){
   chatList.innerHTML="";
-  const chatsSnap = await get(ref(db,"chats"));
-  if(chatsSnap.exists()){
-    chatsSnap.forEach(c=>{
-      const chat = c.val();
-      if(chat.members && chat.members.includes(currentUser.uid)){
+  const chats=await get(ref(db,"chats"));
+  if(chats.exists()){
+    chats.forEach(c=>{
+      const chat=c.val();
+      if(chat.members&&chat.members.includes(currentUser.uid)){
         const div=document.createElement("div");
         div.className="chatItem";
         div.textContent=chat.name;
@@ -164,20 +159,17 @@ async function loadChats(){
   }
 }
 
-// OPEN CHAT
-async function openChat(chatId,name){
-  currentChatId=chatId;
+async function openChat(id,name){
+  currentChatId=id;
   document.getElementById("chatName").textContent=name;
   messagesDiv.innerHTML="";
   show(chatScreen);
-  inputBar.style.display="flex";
   if(currentListenerRef){ off(currentListenerRef); }
-  const msgRef=ref(db,"chats/"+chatId+"/messages");
+  const msgRef=ref(db,"chats/"+id+"/messages");
   currentListenerRef=msgRef;
   onChildAdded(msgRef,s=>renderMessage(s.val()));
 }
 
-// RENDER MESSAGE
 function renderMessage(m){
   const div=document.createElement("div");
   div.classList.add("msg",m.sender===currentUser.uid?"me":"them");
@@ -188,129 +180,67 @@ function renderMessage(m){
   messagesDiv.append(div);
   messagesDiv.scrollTop=messagesDiv.scrollHeight;
 
-  // Swipe to reply
+  // Swipe-to-reply
   div.addEventListener("touchstart",e=>div.startX=e.touches[0].clientX);
   div.addEventListener("touchmove",e=>{
-    const diff = e.touches[0].clientX - div.startX;
-    if(diff>70) showReplyBar(m.text);
+    const diff=e.touches[0].clientX-div.startX;
+    if(diff>70)showReplyBar(m.text);
   });
   div.onclick=()=>showReplyBar(m.text);
 
+  // Notification
   if(m.sender!==currentUser.uid) showNotification("New message",m.text);
 }
 
-// REPLY BAR
 function showReplyBar(text){
   replyTo=text;
   replyBar.style.display="flex";
   replyText.textContent="Replying to: "+text.slice(0,40);
 }
-cancelReplyBtn.onclick=()=>{replyTo=null; replyBar.style.display="none";};
 
-// SEND MESSAGE
+cancelReplyBtn.onclick=()=>{replyTo=null;replyBar.style.display="none";};
+
 document.getElementById("sendBtn").onclick=async()=>{
   const text=messageInput.value.trim();
-  if(!text||!currentChatId) return;
-  await push(ref(db,`chats/${currentChatId}/messages`),{sender:currentUser.uid,text,replyTo,time:Date.now()});
-  messageInput.value=""; replyTo=null; replyBar.style.display="none";
+  if(!text||!currentChatId)return;
+  await push(ref(db,"chats/"+currentChatId+"/messages"),{sender:currentUser.uid,text,replyTo,time:Date.now()});
+  messageInput.value="";
+  replyTo=null;
+  replyBar.style.display="none";
 };
 
-// BACK BUTTON
-document.getElementById("backBtn").onclick=()=>{
-  currentChatId=null;
-  if(currentListenerRef){off(currentListenerRef);}
-  show(chatListScreen);
-  inputBar.style.display="none";
-};
+document.getElementById("backBtn").onclick=()=>{currentChatId=null;if(currentListenerRef){off(currentListenerRef);}show(chatListScreen);};
 
-// LOGOUT
-document.getElementById("logoutBtn").onclick=async()=>{
-  await signOut(auth); currentUser=null; show(loginScreen); inputBar.style.display="none";
-};
-
-// DM BUTTON
-document.getElementById("dmBtn").onclick=async()=>{
-  const uname=prompt("Username to DM:");
-  if(!uname) return;
-  const usersSnap=await get(ref(db,"users"));
-  let target=null;
-  usersSnap.forEach(u=>{if(u.val().username===uname) target={uid:u.key,username:uname}});
-  if(!target) return alert("User not found.");
-
-  const chatsSnap=await get(ref(db,"chats"));
-  let chatId=null;
-  if(chatsSnap.exists()){
-    chatsSnap.forEach(c=>{
-      const chat=c.val();
-      if(!chat.isGroup && chat.members.includes(currentUser.uid) && chat.members.includes(target.uid)) chatId=c.key;
-    });
-  }
-  if(!chatId){
-    const refNew=push(ref(db,"chats"));
-    await set(refNew,{name:target.username,isGroup:false,members:[currentUser.uid,target.uid]});
-    chatId=refNew.key;
-  }
-  openChat(chatId,target.username);
-};
-
-// GROUP BUTTON
-document.getElementById("groupBtn").onclick=async()=>{
-  const name=prompt("Group name:");
-  if(!name) return;
-  const usernames=prompt("Usernames (comma-separated):");
-  const usersArray=usernames?usernames.split(",").map(u=>u.trim()):[];
+document.getElementById("newGroupBtn").onclick=async()=>{
+  const name=prompt("Group name:");if(!name)return;
+  const input=prompt("Enter usernames (comma-separated):");
+  const usernames=input?input.split(",").map(u=>u.trim()):[];
   const usersSnap=await get(ref(db,"users"));
   const memberIds=[currentUser.uid];
-  usersSnap.forEach(u=>{if(usersArray.includes(u.val().username)) memberIds.push(u.key);});
+  usersSnap.forEach(u=>{const val=u.val();if(usernames.includes(val.username))memberIds.push(u.key);});
   const refNew=push(ref(db,"chats"));
   await set(refNew,{name,isGroup:true,members:memberIds});
   loadChats();
 };
 
-// HELP BUTTON
-document.getElementById("helpBtn").onclick=async()=>{
-  const usersSnap = await get(ref(db,"users"));
-  let helpUser=null;
-  usersSnap.forEach(u=>{if(u.val().username==="Whisp_Management") helpUser={uid:u.key,username:"Whisp_Management"}});
-  if(!helpUser){
-    const newHelpRef=push(ref(db,"users"));
-    await set(newHelpRef,{username:"Whisp_Management",email:"whisp@support.com"});
-    helpUser={uid:newHelpRef.key,username:"Whisp_Management"};
-  }
-
-  const chatsSnap = await get(ref(db,"chats"));
-  let chatId=null;
-  if(chatsSnap.exists()){
-    chatsSnap.forEach(c=>{
-      const chat=c.val();
-      if(!chat.isGroup && chat.members.includes(currentUser.uid) && chat.members.includes(helpUser.uid)) chatId=c.key;
-    });
-  }
-  if(!chatId){
-    const refNew=push(ref(db,"chats"));
-    await set(refNew,{name:"Help",isGroup:false,members:[currentUser.uid,helpUser.uid]});
-    chatId=refNew.key;
-  }
-
-  openChat(chatId,"Help");
-
-  // Send button works normally; automated reply added on send
-  const originalSend = document.getElementById("sendBtn").onclick;
-  document.getElementById("sendBtn").onclick=async()=>{
-    const text=messageInput.value.trim();
-    if(!text) return;
-    await push(ref(db,`chats/${chatId}/messages`),{sender:currentUser.uid,text,time:Date.now()});
-    messageInput.value="";
-    replyTo=null;
-    replyBar.style.display="none";
-    await push(ref(db,`chats/${chatId}/messages`),{sender:helpUser.uid,text:"Thank you for messaging Whisp Management. We will respond to your message as soon as possible.",time:Date.now()});
-  };
+document.getElementById("dmBtn").onclick=async()=>{
+  const uname=prompt("Username to DM:");
+  const users=await get(ref(db,"users"));
+  let uid=null;
+  users.forEach(u=>{if(u.val().username===uname)uid=u.key;});
+  if(!uid)return alert("User not found.");
+  const refNew=push(ref(db,"chats"));
+  await set(refNew,{name:uname,isGroup:false,members:[currentUser.uid,uid]});
+  loadChats();
 };
 
-// NOTIFICATIONS
+// Notifications
+if("serviceWorker"in navigator){navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission());}
 function showNotification(title,body){
-  if(Notification.permission==="granted") new Notification(title,{body});
-  else if(Notification.permission!=="denied") Notification.requestPermission();
+  if(!("Notification"in window))return;
+  if(Notification.permission==="granted"){
+    navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/906/906349.png"}));
+  }
 }
 </script>
 </body>
