--- a/index.html
+++ b/index.html
@@ -3,77 +3,77 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<title>Whisp 💬</title>
+<title>Whisp</title>
 <style>
-  html, body {margin:0;padding:0;height:100%;font-family:"Segoe UI", Roboto, sans-serif;background:#e8f0fe;}
-  main {height:100%;display:flex;flex-direction:column;max-width:600px;margin:auto;border-radius:10px;overflow:hidden;box-shadow:0 4px 10px rgba(0,0,0,0.1);}
-  
+  html, body{margin:0;padding:0;height:100%;font-family:"Segoe UI",Roboto,sans-serif;background:#e8f0fe;}
+  main{height:100%;display:flex;flex-direction:column;}
+
   .screen{display:none;flex-direction:column;height:100%;}
   .screen.active{display:flex;}
 
   /* Login */
-  #loginScreen{justify-content:center;align-items:center;text-align:center;padding:20px;background:#1a73e8;color:white;}
+  #loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;}
   #loginScreen h2{font-size:2rem;margin-bottom:20px;}
   #loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
   #loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 
   /* Chat List */
-  #chatListScreen{background:#fff;flex:1;position:relative;}
-  #chatListHeader{background:#1a73e8;color:white;padding:14px;font-weight:600;position:sticky;top:0;z-index:1;}
+  #chatListScreen{background:#fff;flex:1;}
+  #chatListHeader{background:#1a73e8;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
   #chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
   .chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
   .chatItem:hover{background:#f1f5ff;}
 
-  /* Floating buttons */
-  .floatingBtn{position:fixed;bottom:20px;right:20px;background:#1a73e8;color:white;border:none;border-radius:50%;width:56px;height:56px;font-size:1.5rem;cursor:pointer;box-shadow:0 2px 5px rgba(0,0,0,0.3);}
-  #newGroupBtn{right:90px;}
+  /* Bottom Menu */
+  #bottomMenu{display:flex;justify-content:space-around;align-items:center;position:fixed;bottom:0;left:0;width:100%;background:#1a73e8;padding:10px 0;}
+  #bottomMenu button{background:#fff;border:none;color:#1a73e8;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
 
   /* Chat */
   #chatScreen{background:#e8f0fe;flex:1;display:flex;flex-direction:column;}
-  #chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;align-items:center;position:sticky;top:0;z-index:2;}
-  #chatHeader button{background:none;border:none;color:white;font-size:1.2rem;cursor:pointer;margin-right:10px;}
-  #chatName{flex:1;font-weight:600;text-align:center;}
+  #chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
+  #chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
   #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
-  .msg{max-width:75%;margin-bottom:10px;padding:8px 12px;border-radius:12px;position:relative;word-wrap:break-word;animation:fadeIn 0.2s;}
+  .msg{max-width:80%;margin-bottom:10px;padding:8px 12px;border-radius:10px;position:relative;word-wrap:break-word;}
   .me{align-self:flex-end;background:#cfe2ff;}
   .them{align-self:flex-start;background:#fff;}
-  .timestamp{font-size:0.75rem;color:#555;text-align:right;margin-top:2px;}
+  .timestamp{font-size:0.75rem;color:#666;text-align:right;margin-top:2px;}
+  .msg img{max-width:70%;border-radius:10px;margin-top:4px;}
 
-  /* Reply bar */
+  /* Reply Bar */
   #replyBar{display:none;background:#e3f2fd;padding:6px 10px;border-left:4px solid #1a73e8;font-size:0.9rem;align-items:center;display:flex;justify-content:space-between;}
   #replyText{flex:1;}
   #cancelReply{background:none;border:none;color:#1a73e8;font-weight:bold;cursor:pointer;margin-left:10px;}
 
-  /* Input bar */
-  #inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;position:sticky;bottom:0;}
+  #inputBar{display:flex;align-items:center;background:#fff;padding:8px;border-top:1px solid #ccc;}
   #message{flex:1;padding:10px;border-radius:20px;border:1px solid #ccc;outline:none;}
   #sendBtn{background:#1a73e8;color:white;border:none;border-radius:50%;width:42px;height:42px;margin-left:8px;font-size:1.2rem;cursor:pointer;}
+  #imageBtn{background:none;border:none;font-size:1.5rem;margin-left:6px;cursor:pointer;}
 
-  @keyframes fadeIn{from{opacity:0}to{opacity:1}}
+  @media (min-width:700px){main{max-width:600px;margin:auto;border-radius:10px;overflow:hidden;}#bottomMenu{position:static;border-top:1px solid #ccc;}}
 </style>
 </head>
 <body>
 <main>
-  <!-- Login -->
   <section id="loginScreen" class="screen active">
     <div>
-      <h2>Whisp 💬</h2>
+      <h2>Welcome to Whisp 💬</h2>
       <input id="email" placeholder="Email" />
       <input id="password" type="password" placeholder="Password" />
-      <input id="username" placeholder="Username (signup)" />
+      <input id="username" placeholder="Username (for signup)" />
       <button id="loginBtn">Login / Register</button>
     </div>
   </section>
 
-  <!-- Chat List -->
   <section id="chatListScreen" class="screen">
-    <div id="chatListHeader">Chats</div>
+    <div id="chatListHeader">Whisp Chats</div>
     <div id="chatList"></div>
-    <button id="dmBtn" class="floatingBtn">💬</button>
-    <button id="newGroupBtn" class="floatingBtn">👥</button>
+    <div id="bottomMenu">
+      <button id="dmBtn">DM</button>
+      <button id="groupBtn">Group</button>
+      <button id="logoutBtn">Logout</button>
+    </div>
   </section>
 
-  <!-- Chat Screen -->
   <section id="chatScreen" class="screen">
     <div id="chatHeader">
       <button id="backBtn">←</button>
@@ -86,6 +86,8 @@
     </div>
     <div id="inputBar">
       <input id="message" placeholder="Type a message..." />
+      <input type="file" id="imageInput" accept="image/*" style="display:none;" />
+      <button id="imageBtn">📎</button>
       <button id="sendBtn">➤</button>
     </div>
   </section>
@@ -95,6 +97,7 @@
 import { initializeApp } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-app.js";
 import { getAuth, signInWithEmailAndPassword, createUserWithEmailAndPassword, signOut, onAuthStateChanged } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-auth.js";
 import { getDatabase, ref, set, push, get, onChildAdded, off } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-database.js";
+import { getStorage, ref as sRef, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/11.0.1/firebase-storage.js";
 
 const firebaseConfig = {
   apiKey: "AIzaSyCEdtncZpDgOSnULIjopee7GKh9h9hveKk",
@@ -108,6 +111,7 @@ const firebaseConfig = {
 const app = initializeApp(firebaseConfig);
 const auth = getAuth(app);
 const db = getDatabase(app);
+const storage = getStorage(app);
 
 const loginScreen=document.getElementById("loginScreen"),
       chatListScreen=document.getElementById("chatListScreen"),
@@ -173,23 +177,27 @@ async function openChat(id,name){
 function renderMessage(m){
   const div=document.createElement("div");
   div.classList.add("msg",m.sender===currentUser.uid?"me":"them");
-  div.innerHTML=`
-    ${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}
-    ${m.text}
-    <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
-  messagesDiv.append(div);
+  
+  let content="";
+  if(m.replyTo) content+=`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`;
+  if(m.text) content+=`<div>${m.text}</div>`;
+  if(m.image) content+=`<img src="${m.image}" />`;
+  content+=`<div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}</div>`;
+  
+  div.innerHTML=content;
+  messagesDiv.appendChild(div);
   messagesDiv.scrollTop=messagesDiv.scrollHeight;
 
   // Swipe-to-reply
   div.addEventListener("touchstart",e=>div.startX=e.touches[0].clientX);
   div.addEventListener("touchmove",e=>{
     const diff=e.touches[0].clientX-div.startX;
-    if(diff>70)showReplyBar(m.text);
+    if(diff>70) showReplyBar(m.text || (m.image?"📷 Image":""));
   });
-  div.onclick=()=>showReplyBar(m.text);
+  div.onclick=()=>showReplyBar(m.text || (m.image?"📷 Image":""));
 
   // Notification
-  if(m.sender!==currentUser.uid) showNotification("New message",m.text);
+  if(m.sender!==currentUser.uid) showNotification("New message",m.text||"📷 Image");
 }
 
 function showReplyBar(text){
@@ -198,11 +206,14 @@ function showReplyBar(text){
   replyText.textContent="Replying to: "+text.slice(0,40);
 }
 
-cancelReplyBtn.onclick=()=>{replyTo=null;replyBar.style.display="none";};
+cancelReplyBtn.onclick=()=>{
+  replyTo=null;
+  replyBar.style.display="none";
+};
 
 document.getElementById("sendBtn").onclick=async()=>{
   const text=messageInput.value.trim();
-  if(!text||!currentChatId)return;
+  if(!text&&!replyTo)return;
   await push(ref(db,"chats/"+currentChatId+"/messages"),{sender:currentUser.uid,text,replyTo,time:Date.now()});
   messageInput.value="";
   replyTo=null;
@@ -210,8 +221,9 @@ document.getElementById("sendBtn").onclick=async()=>{
 };
 
 document.getElementById("backBtn").onclick=()=>{currentChatId=null;if(currentListenerRef){off(currentListenerRef);}show(chatListScreen);};
+document.getElementById("logoutBtn").onclick=async()=>{await signOut(auth);currentUser=null;show(loginScreen);};
 
-document.getElementById("newGroupBtn").onclick=async()=>{
+document.getElementById("groupBtn").onclick=async()=>{
   const name=prompt("Group name:");if(!name)return;
   const input=prompt("Enter usernames (comma-separated):");
   const usernames=input?input.split(",").map(u=>u.trim()):[];
@@ -232,6 +244,18 @@ document.getElementById("dmBtn").onclick=async()=>{
   const refNew=push(ref(db,"chats"));
   await set(refNew,{name:uname,isGroup:false,members:[currentUser.uid,uid]});
   loadChats();
+};
+
+// Image sending
+document.getElementById("imageBtn").onclick=()=>{document.getElementById("imageInput").click();};
+document.getElementById("imageInput").onchange=async(e)=>{
+  const file=e.target.files[0];
+  if(!file||!currentChatId)return;
+  const fileRef=sRef(storage, `images/${currentUser.uid}_${Date.now()}_${file.name}`);
+  await uploadBytes(fileRef,file);
+  const url=await getDownloadURL(fileRef);
+  await push(ref(db,`chats/${currentChatId}/messages`),{sender:currentUser.uid,text:"",image:url,replyTo,time:Date.now()});
+  replyTo=null; replyBar.style.display="none";
 };
 
 // Notifications
