--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@ main{height:100%;display:flex;flex-direction:column;}
 .screen.active{display:flex;}
 
 /* Login */
-#loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;}
+#loginScreen{justify-content:center;align-items:center;background:#1a73e8;color:white;text-align:center;padding:20px;display:flex;flex-direction:column;}
 #loginScreen h2{font-size:2rem;margin-bottom:20px;}
 #loginScreen input{display:block;width:80%;margin:8px auto;padding:10px;border-radius:8px;border:none;font-size:1rem;}
 #loginBtn{background:#4285f4;color:white;border:none;padding:10px 20px;border-radius:8px;cursor:pointer;font-weight:600;box-shadow:0 2px 5px rgba(0,0,0,0.2);}
 
 /* Chat List */
-#chatListScreen{background:#fff;flex:1;}
+#chatListScreen{background:#fff;flex:1;display:flex;flex-direction:column;}
 #chatListHeader{background:#1a73e8;color:white;padding:14px;display:flex;justify-content:space-between;align-items:center;font-weight:600;}
 #chatList{flex:1;overflow-y:auto;padding-bottom:70px;}
 .chatItem{padding:14px;border-bottom:1px solid #eee;cursor:pointer;}
@@ -28,7 +28,7 @@ main{height:100%;display:flex;flex-direction:column;}
 #bottomMenu button{background:#fff;border:none;color:#1a73e8;padding:8px 16px;border-radius:8px;font-weight:600;cursor:pointer;}
 
 /* Chat */
-#chatScreen{background:#e8f0fe;}
+#chatScreen{background:#e8f0fe;flex:1;display:flex;flex-direction:column;}
 #chatHeader{background:#1a73e8;color:white;padding:12px;display:flex;justify-content:space-between;align-items:center;}
 #chatHeader button{background:none;border:none;color:white;font-size:1rem;cursor:pointer;}
 #messages{flex:1;overflow-y:auto;padding:10px;display:flex;flex-direction:column;}
@@ -57,13 +57,11 @@ main{height:100%;display:flex;flex-direction:column;}
 <body>
 <main>
   <section id="loginScreen" class="screen active">
-    <div>
-      <h2>Welcome to Whisp 💬</h2>
-      <input id="email" placeholder="Email" />
-      <input id="password" type="password" placeholder="Password" />
-      <input id="username" placeholder="Username (for signup)" />
-      <button id="loginBtn">Login / Register</button>
-    </div>
+    <h2>Welcome to Whisp 💬</h2>
+    <input id="email" placeholder="Email" />
+    <input id="password" type="password" placeholder="Password" />
+    <input id="username" placeholder="Username (for signup)" />
+    <button id="loginBtn">Login / Register</button>
   </section>
 
   <section id="chatListScreen" class="screen">
@@ -124,8 +122,6 @@ const loginScreen=document.getElementById("loginScreen"),
       typingIndicator=document.getElementById("typingIndicator");
 
 let currentUser=null, currentChatId=null, replyTo=null, currentListenerRef=null, typingRef=null;
-
-// Show screen helper
 const show=(s)=>{[loginScreen,chatListScreen,chatScreen].forEach(e=>e.classList.remove("active"));s.classList.add("active");};
 
 // Login / Signup
@@ -177,6 +173,42 @@ async function openChat(id,name){
   const msgRef=ref(db,"chats/"+id+"/messages");
   currentListenerRef=msgRef;
 
+  // IntersectionObserver for read receipts
+  const observer = new IntersectionObserver((entries)=>{
+    entries.forEach(async entry=>{
+      if(entry.isIntersecting){
+        const key = entry.target.dataset.key;
+        const msg = entry.target.msgData;
+        if(!msg.seen.includes(currentUser.uid)){
+          msg.seen.push(currentUser.uid);
+          await update(ref(db,`chats/${currentChatId}/messages/${key}`),{seen:msg.seen});
+        }
+      }
+    });
+  },{root:messagesDiv,threshold:0.9});
+
+  function renderMessage(key,m){
+    if(document.getElementById(key)) return;
+    const div = document.createElement("div");
+    div.id = key;
+    div.dataset.key = key;
+    div.classList.add("msg", m.sender===currentUser.uid?"me":"them");
+    div.msgData = m;
+    div.innerHTML = `${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}${m.text}<div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}${m.seen && m.seen.includes(currentUser.uid?" ✅":" ❑")}</div>`;
+    messagesDiv.append(div);
+    messagesDiv.scrollTop=messagesDiv.scrollHeight;
+
+    observer.observe(div);
+
+    // Swipe to reply
+    div.addEventListener("touchstart",e=>div.startX=e.touches[0].clientX);
+    div.addEventListener("touchmove",e=>{
+      const diff=e.touches[0].clientX-div.startX;
+      if(diff>70) showReplyBar(m.text);
+    });
+    div.onclick=()=>showReplyBar(m.text);
+  }
+
   onChildAdded(msgRef,s=>renderMessage(s.key,s.val()));
 
   // Typing indicator
@@ -192,99 +224,69 @@ async function openChat(id,name){
   });
 }
 
-// Render message
-function renderMessage(key,m){
-  // prevent duplicates
-  if(document.getElementById(key)) return;
-
-  const div=document.createElement("div");
-  div.id=key;
-  div.classList.add("msg",m.sender===currentUser.uid?"me":"them");
-  div.innerHTML=`
-    ${m.replyTo?`<div style="font-size:0.85rem;color:#555;border-left:3px solid #1a73e8;padding-left:6px;margin-bottom:3px;">${m.replyTo}</div>`:""}
-    ${m.text}
-    <div class="timestamp">${new Date(m.time).toLocaleTimeString([], {hour:'2-digit',minute:'2-digit'})}
-    ${m.seen && m.seen.includes(currentUser.uid)?" ✅":" ❑"}</div>`;
-  messagesDiv.append(div);
-  messagesDiv.scrollTop=messagesDiv.scrollHeight;
-
-  // Swipe to reply
-  div.addEventListener("touchstart",e=>div.startX=e.touches[0].clientX);
-  div.addEventListener("touchmove",e=>{
-    const diff=e.touches[0].clientX-div.startX;
-    if(diff>70) showReplyBar(m.text);
-  });
-  div.onclick=()=>showReplyBar(m.text);
-
-  // Update read receipts
-  if(!m.seen) m.seen=[];
-  if(!m.seen.includes(currentUser.uid)){
-    m.seen.push(currentUser.uid);
-    update(ref(db,`chats/${currentChatId}/messages/${key}`),{seen:m.seen});
-  }
-}
-
-// Show / cancel reply
-function showReplyBar(text){
-  replyTo=text;
-  replyBar.style.display="flex";
-  replyText.textContent="Replying to: "+text.slice(0,40);
-}
-cancelReplyBtn.onclick=()=>{replyTo=null;replyBar.style.display="none";};
-
-// Typing detection
-messageInput.addEventListener("input",()=>{
-  if(!currentChatId) return;
-  set(ref(db,`chats/${currentChatId}/typing/${currentUser.uid}`),messageInput.value.length>0);
-});
-messageInput.addEventListener("blur",()=>{ if(currentChatId) set(ref(db,`chats/${currentChatId}/typing/${currentUser.uid}`),false); });
+// Reply bar
+function showReplyBar(text){replyBar.style.display="flex";replyText.textContent=text;replyTo=text;messageInput.focus();}
+cancelReplyBtn.onclick=()=>{replyBar.style.display="none";replyText.textContent="";replyTo=null;}
 
 // Send message
 document.getElementById("sendBtn").onclick=async()=>{
-  const text=messageInput.value.trim();
-  if(!text||!currentChatId) return;
-  await push(ref(db,`chats/${currentChatId}/messages`),{sender:currentUser.uid,text,replyTo,time:Date.now(),seen:[currentUser.uid]});
-  messageInput.value=""; replyTo=null; replyBar.style.display="none";
+  if(!messageInput.value.trim()||!currentChatId) return;
+  const msg={sender:currentUser.uid,text:messageInput.value.trim(),time:Date.now(),seen:[currentUser.uid]};
+  if(replyTo) msg.replyTo=replyTo;
+  await push(ref(db,"chats/"+currentChatId+"/messages"),msg);
+  messageInput.value="";
+  replyBar.style.display="none"; replyTo=null;
+
+  // Typing false
   set(ref(db,`chats/${currentChatId}/typing/${currentUser.uid}`),false);
 };
 
-// Back / logout
-document.getElementById("backBtn").onclick=()=>{currentChatId=null;if(currentListenerRef){off(currentListenerRef);}show(chatListScreen);};
-document.getElementById("logoutBtn").onclick=async()=>{await signOut(auth);currentUser=null;show(loginScreen);};
+// Typing indicator
+let typingTimeout;
+messageInput.addEventListener("input",()=>{
+  if(!currentChatId) return;
+  set(ref(db,`chats/${currentChatId}/typing/${currentUser.uid}`),true);
+  clearTimeout(typingTimeout);
+  typingTimeout=setTimeout(()=>{set(ref(db,`chats/${currentChatId}/typing/${currentUser.uid}`),false);},1500);
+});
 
-// Create group
-document.getElementById("groupBtn").onclick=async()=>{
-  const name=prompt("Group name:"); if(!name) return;
-  const usersStr=prompt("Enter usernames (comma-separated):")||"";
-  const usernames=usersStr.split(",").map(u=>u.trim());
-  const usersSnap=await get(ref(db,"users"));
-  const memberIds=[currentUser.uid];
-  usersSnap.forEach(u=>{if(usernames.includes(u.val().username)) memberIds.push(u.key);});
-  const refNew=push(ref(db,"chats"));
-  await set(refNew,{name,isGroup:true,members:memberIds});
-  loadChats();
-};
-
-// Direct message
+// Bottom menu buttons
+document.getElementById("backBtn").onclick=()=>{show(chatListScreen);currentChatId=null;messagesDiv.innerHTML="";}
+document.getElementById("logoutBtn").onclick=()=>signOut(auth);
 document.getElementById("dmBtn").onclick=async()=>{
-  const uname=prompt("Username to DM:"); if(!uname) return;
-  const users=await get(ref(db,"users"));
-  let uid=null;
-  users.forEach(u=>{if(u.val().username===uname) uid=u.key;});
-  if(!uid) return alert("User not found.");
-  const refNew=push(ref(db,"chats"));
-  await set(refNew,{name:uname,isGroup:false,members:[currentUser.uid,uid]});
+  const username=prompt("Enter username for DM:");
+  if(!username) return;
+  const usersSnap=await get(ref(db,"users")); let target=null;
+  usersSnap.forEach(u=>{const v=u.val();if(v.username.toLowerCase()===username.toLowerCase())target={uid:u.key,name:v.username};});
+  if(!target) return alert("User not found");
+
+  // check existing
+  const chatsSnap=await get(ref(db,"chats"));
+  let chatId=null;
+  if(chatsSnap.exists()) chatsSnap.forEach(c=>{
+    const ch=c.val();
+    if(!ch.isGroup && ch.members.includes(currentUser.uid) && ch.members.includes(target.uid)) chatId=c.key;
+  });
+  if(!chatId){
+    const newChatRef=push(ref(db,"chats"));
+    await set(newChatRef,{isGroup:false,members:[currentUser.uid,target.uid],name:target.name});
+    chatId=newChatRef.key;
+  }
+  openChat(chatId,target.name);
+};
+document.getElementById("groupBtn").onclick=async()=>{
+  const groupName=prompt("Group name:");
+  if(!groupName) return;
+  const usernames=prompt("Enter usernames to add (comma separated):");
+  if(!usernames) return;
+  const usersSnap=await get(ref(db,"users")); let members=[currentUser.uid];
+  usernames.split(",").forEach(u=>{
+    usersSnap.forEach(s=>{if(s.val().username.toLowerCase()===u.trim().toLowerCase()) members.push(s.key);});
+  });
+  const newChatRef=push(ref(db,"chats"));
+  await set(newChatRef,{isGroup:true,name:groupName,members:[...new Set(members)]});
   loadChats();
 };
-
-// Notifications
-if("serviceWorker"in navigator){navigator.serviceWorker.register("sw.js").then(()=>Notification.requestPermission());}
-function showNotification(title,body){
-  if(!("Notification"in window))return;
-  if(Notification.permission==="granted"){
-    navigator.serviceWorker.ready.then(r=>r.showNotification(title,{body,icon:"https://cdn-icons-png.flaticon.com/512/906/906349.png"}));
-  }
-}
 </script>
 </body>
 </html>
